Fix IFrame too large

--- a/assets/stylesheets/styles.scss
+++ b/assets/stylesheets/styles.scss
@@ -84,8 +84,8 @@ iframe {
   #home-container #page-description h1 {
     font-size: 4rem;
   }
-  iframe {
-    max-width: fit-content;
+  IFrame {
+    width:80%;
   }
 }
 .text-box {
